# python-project-lvl1

./: .README.md.swp  .gitignore  .pyproject.toml.swp  Makefile  README.md  pyproject.toml
.github/workflows/: make_lint.yaml
brain_games/: cli.py  engine.py  play.py
brain_games/games/: brain_calc.py  brain_calc_game.py  brain_calc_script.py  brain_even.py  brain_even_game.py  brain_even_script.py  brain_gcd.py  brain_gcd_game.py  brain_gcd_script.py  brain_prime.py  brain_prime_game.py  brain_prime_script.py  brain_progression.py  brain_progression_game.py  brain_progression_script.py  calc.py  even.py  game.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_calc_script.py  brain_even.py  brain_even_script.py  brain_games.py  brain_gcd.py  brain_gcd_script.py  brain_prime.py  brain_prime_script.py  brain_progression.py  brain_progression_script.py  cli.py  engine_games.py  game_engine.py
