[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dimitrii Chimidov <cimidovdmitrii@gmail.com>"]
repository = "https://github.com/Dmitriy-0891/python-project-lvl1.git"
classifiers=[
        'Programming Language :: Python :: 3.8',
]
packages = [{ include = "brain_games"},]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-calc-game = "brain_games.games.brain_calc_game:main"
brain-even-game = "brain_games.games.brain_even_game:main"
brain-gcd-game = "brain_games.games.brain_gcd_game:main"
brain-prime-game = "brain_games.games.brain_prime_game:main"
brain-progression-game = "brain_games.games.brain_progression_game:main"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
