[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dimitrii Chimidov <cimidovdmitrii@gmail.com>"]
repository = "https://github.com/Dmitriy-0891/python-project-lvl1.git"
classifiers=[
        'Programming Language :: Python :: 3.8',
]
packages = [{ include = "brain_games"},]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even_script:main"
brain-calc = "brain_games.scripts.brain_calc_script:main"
brain-gcd = "brain_games.scripts.brain_gcd_script:main"
brain-progression = "brain_games.scripts.brain_progression_script:main"
brain-prime = "brain_games.scripts.brain_prime_script:main"
brain-calc-game = "brain_games.games.brain_calc:main"
brain-even-game = "brain_games.games.brain_even:main"
brain-gcd-game = "brain_games.games.brain_gcd:main"
brain-prime-game = "brain_games.games.brain_prime:main"
brain-progression-game = "brain_games.games.brain_progression:main"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
